CC_Lab_discussion/version_0/Lab-5.1-version4/y.output
State 44 conflicts: 2 shift/reduce
State 45 conflicts: 2 shift/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEAD PROC

    2 HEAD: HEADER

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY RCB

    4 MAIN_TYPE: INT

    5 BODY: STATEMENTS

    6 STATEMENTS: STATEMENT STATEMENTS
    7           | STATEMENT

    8 STATEMENT: DECLARATION_STATEMENT
    9          | PROGRAM_STATEMENT

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST SC

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN TYPE

   12 TYPE: INT
   13     | CHAR

   14 TYPE_SIGN: UNSIGNED
   15          | %empty

   16 TYPE_EXTN: SHORT
   17          | LONG
   18          | %empty

   19 VAR_LIST: EXT_VAR COMA VAR_LIST
   20         | EXT_VAR

   21 EXT_VAR: VAR_LABEL

   22 PROGRAM_STATEMENT: VAR_LABEL EQ A_EXPN SC

   23 A_EXPN: A_EXPN PLUS A_EXPN
   24       | A_EXPN STAR A_EXPN
   25       | LB A_EXPN RB
   26       | VAR_LABEL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HEADER (258) 2
    MAIN (259) 3
    LB (260) 3 25
    RB (261) 3 25
    LCB (262) 3
    RCB (263) 3
    SC (264) 10 22
    COMA (265) 19
    EQ (266) 22
    PLUS (267) 23
    STAR (268) 24
    VAR_LABEL <test_name> (269) 21 22 26
    INT <type_info> (270) 4 12
    CHAR <type_info> (271) 13
    UNSIGNED <type_info> (272) 14
    SHORT <type_info> (273) 16
    LONG <type_info> (274) 17


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    prm (21)
        on left: 1
        on right: 0
    HEAD (22)
        on left: 2
        on right: 1
    PROC (23)
        on left: 3
        on right: 1
    MAIN_TYPE (24)
        on left: 4
        on right: 3
    BODY (25)
        on left: 5
        on right: 3
    STATEMENTS (26)
        on left: 6 7
        on right: 5 6
    STATEMENT (27)
        on left: 8 9
        on right: 6 7
    DECLARATION_STATEMENT (28)
        on left: 10
        on right: 8
    EXT_DATA_TYPE <ext_type> (29)
        on left: 11
        on right: 10
    TYPE <type_info> (30)
        on left: 12 13
        on right: 11
    TYPE_SIGN <type_info> (31)
        on left: 14 15
        on right: 11
    TYPE_EXTN <type_info> (32)
        on left: 16 17 18
        on right: 11
    VAR_LIST (33)
        on left: 19 20
        on right: 10 19
    EXT_VAR <ext_var> (34)
        on left: 21
        on right: 19 20
    PROGRAM_STATEMENT (35)
        on left: 22
        on right: 9
    A_EXPN (36)
        on left: 23 24 25 26
        on right: 22 23 24 25


State 0

    0 $accept: . prm $end

    HEADER  shift, and go to state 1

    prm   go to state 2
    HEAD  go to state 3


State 1

    2 HEAD: HEADER .

    $default  reduce using rule 2 (HEAD)


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 4


State 3

    1 prm: HEAD . PROC

    INT  shift, and go to state 5

    PROC       go to state 6
    MAIN_TYPE  go to state 7


State 4

    0 $accept: prm $end .

    $default  accept


State 5

    4 MAIN_TYPE: INT .

    $default  reduce using rule 4 (MAIN_TYPE)


State 6

    1 prm: HEAD PROC .

    $default  reduce using rule 1 (prm)


State 7

    3 PROC: MAIN_TYPE . MAIN LB RB LCB BODY RCB

    MAIN  shift, and go to state 8


State 8

    3 PROC: MAIN_TYPE MAIN . LB RB LCB BODY RCB

    LB  shift, and go to state 9


State 9

    3 PROC: MAIN_TYPE MAIN LB . RB LCB BODY RCB

    RB  shift, and go to state 10


State 10

    3 PROC: MAIN_TYPE MAIN LB RB . LCB BODY RCB

    LCB  shift, and go to state 11


State 11

    3 PROC: MAIN_TYPE MAIN LB RB LCB . BODY RCB

    VAR_LABEL  shift, and go to state 12
    UNSIGNED   shift, and go to state 13

    $default  reduce using rule 15 (TYPE_SIGN)

    BODY                   go to state 14
    STATEMENTS             go to state 15
    STATEMENT              go to state 16
    DECLARATION_STATEMENT  go to state 17
    EXT_DATA_TYPE          go to state 18
    TYPE_SIGN              go to state 19
    PROGRAM_STATEMENT      go to state 20


State 12

   22 PROGRAM_STATEMENT: VAR_LABEL . EQ A_EXPN SC

    EQ  shift, and go to state 21


State 13

   14 TYPE_SIGN: UNSIGNED .

    $default  reduce using rule 14 (TYPE_SIGN)


State 14

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY . RCB

    RCB  shift, and go to state 22


State 15

    5 BODY: STATEMENTS .

    $default  reduce using rule 5 (BODY)


State 16

    6 STATEMENTS: STATEMENT . STATEMENTS
    7           | STATEMENT .

    VAR_LABEL  shift, and go to state 12
    UNSIGNED   shift, and go to state 13

    RCB       reduce using rule 7 (STATEMENTS)
    $default  reduce using rule 15 (TYPE_SIGN)

    STATEMENTS             go to state 23
    STATEMENT              go to state 16
    DECLARATION_STATEMENT  go to state 17
    EXT_DATA_TYPE          go to state 18
    TYPE_SIGN              go to state 19
    PROGRAM_STATEMENT      go to state 20


State 17

    8 STATEMENT: DECLARATION_STATEMENT .

    $default  reduce using rule 8 (STATEMENT)


State 18

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE . VAR_LIST SC

    VAR_LABEL  shift, and go to state 24

    VAR_LIST  go to state 25
    EXT_VAR   go to state 26


State 19

   11 EXT_DATA_TYPE: TYPE_SIGN . TYPE_EXTN TYPE

    SHORT  shift, and go to state 27
    LONG   shift, and go to state 28

    $default  reduce using rule 18 (TYPE_EXTN)

    TYPE_EXTN  go to state 29


State 20

    9 STATEMENT: PROGRAM_STATEMENT .

    $default  reduce using rule 9 (STATEMENT)


State 21

   22 PROGRAM_STATEMENT: VAR_LABEL EQ . A_EXPN SC

    LB         shift, and go to state 30
    VAR_LABEL  shift, and go to state 31

    A_EXPN  go to state 32


State 22

    3 PROC: MAIN_TYPE MAIN LB RB LCB BODY RCB .

    $default  reduce using rule 3 (PROC)


State 23

    6 STATEMENTS: STATEMENT STATEMENTS .

    $default  reduce using rule 6 (STATEMENTS)


State 24

   21 EXT_VAR: VAR_LABEL .

    $default  reduce using rule 21 (EXT_VAR)


State 25

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST . SC

    SC  shift, and go to state 33


State 26

   19 VAR_LIST: EXT_VAR . COMA VAR_LIST
   20         | EXT_VAR .

    COMA  shift, and go to state 34

    $default  reduce using rule 20 (VAR_LIST)


State 27

   16 TYPE_EXTN: SHORT .

    $default  reduce using rule 16 (TYPE_EXTN)


State 28

   17 TYPE_EXTN: LONG .

    $default  reduce using rule 17 (TYPE_EXTN)


State 29

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN . TYPE

    INT   shift, and go to state 35
    CHAR  shift, and go to state 36

    TYPE  go to state 37


State 30

   25 A_EXPN: LB . A_EXPN RB

    LB         shift, and go to state 30
    VAR_LABEL  shift, and go to state 31

    A_EXPN  go to state 38


State 31

   26 A_EXPN: VAR_LABEL .

    $default  reduce using rule 26 (A_EXPN)


State 32

   22 PROGRAM_STATEMENT: VAR_LABEL EQ A_EXPN . SC
   23 A_EXPN: A_EXPN . PLUS A_EXPN
   24       | A_EXPN . STAR A_EXPN

    SC    shift, and go to state 39
    PLUS  shift, and go to state 40
    STAR  shift, and go to state 41


State 33

   10 DECLARATION_STATEMENT: EXT_DATA_TYPE VAR_LIST SC .

    $default  reduce using rule 10 (DECLARATION_STATEMENT)


State 34

   19 VAR_LIST: EXT_VAR COMA . VAR_LIST

    VAR_LABEL  shift, and go to state 24

    VAR_LIST  go to state 42
    EXT_VAR   go to state 26


State 35

   12 TYPE: INT .

    $default  reduce using rule 12 (TYPE)


State 36

   13 TYPE: CHAR .

    $default  reduce using rule 13 (TYPE)


State 37

   11 EXT_DATA_TYPE: TYPE_SIGN TYPE_EXTN TYPE .

    $default  reduce using rule 11 (EXT_DATA_TYPE)


State 38

   23 A_EXPN: A_EXPN . PLUS A_EXPN
   24       | A_EXPN . STAR A_EXPN
   25       | LB A_EXPN . RB

    RB    shift, and go to state 43
    PLUS  shift, and go to state 40
    STAR  shift, and go to state 41


State 39

   22 PROGRAM_STATEMENT: VAR_LABEL EQ A_EXPN SC .

    $default  reduce using rule 22 (PROGRAM_STATEMENT)


State 40

   23 A_EXPN: A_EXPN PLUS . A_EXPN

    LB         shift, and go to state 30
    VAR_LABEL  shift, and go to state 31

    A_EXPN  go to state 44


State 41

   24 A_EXPN: A_EXPN STAR . A_EXPN

    LB         shift, and go to state 30
    VAR_LABEL  shift, and go to state 31

    A_EXPN  go to state 45


State 42

   19 VAR_LIST: EXT_VAR COMA VAR_LIST .

    $default  reduce using rule 19 (VAR_LIST)


State 43

   25 A_EXPN: LB A_EXPN RB .

    $default  reduce using rule 25 (A_EXPN)


State 44

   23 A_EXPN: A_EXPN . PLUS A_EXPN
   23       | A_EXPN PLUS A_EXPN .
   24       | A_EXPN . STAR A_EXPN

    PLUS  shift, and go to state 40
    STAR  shift, and go to state 41

    PLUS      [reduce using rule 23 (A_EXPN)]
    STAR      [reduce using rule 23 (A_EXPN)]
    $default  reduce using rule 23 (A_EXPN)


State 45

   23 A_EXPN: A_EXPN . PLUS A_EXPN
   24       | A_EXPN . STAR A_EXPN
   24       | A_EXPN STAR A_EXPN .

    PLUS  shift, and go to state 40
    STAR  shift, and go to state 41

    PLUS      [reduce using rule 24 (A_EXPN)]
    STAR      [reduce using rule 24 (A_EXPN)]
    $default  reduce using rule 24 (A_EXPN)
